Margin fix for selection form block -- left-aligned with category boxes

--- a/components/web/themes/codeforsf/public/css/partials/_selectionForm.css
+++ b/components/web/themes/codeforsf/public/css/partials/_selectionForm.css
@@ -4,6 +4,7 @@
   line-height: 40px;
   margin-left: initial;
   margin-top: 20px;
+  padding-left: 0px;
   overflow-x: scroll;
   white-space: nowrap;
 
